handler/ha_innodb.cc
@@ -81,6 +81,11 @@ extern pthread_mutex_t LOCK_thread_count;
 but we need it here */
 bool check_global_access(THD *thd, ulong want_access);
 #endif /* MYSQL_VERSION_ID < 50124 */
+
+/* we need to check if binary logging is enabled in
+ha_innobase::external_lock(), see http://bugs.mysql.com/40360.
+The variable opt_bin_log is defined in mysqld.cc inside #ifdef MYSQL_SERVER */
+extern bool	opt_bin_log;
 #endif /* MYSQL_SERVER */
 
 /** to protect innobase_open_files */
@@ -7697,8 +7702,9 @@ ha_innobase::external_lock(
 	{
 		ulong const binlog_format= thd_binlog_format(thd);
 		ulong const tx_isolation = thd_tx_isolation(ha_thd());
-		if (tx_isolation <= ISO_READ_COMMITTED &&
-		    binlog_format == BINLOG_FORMAT_STMT)
+		if (opt_bin_log
+		    && tx_isolation <= ISO_READ_COMMITTED
+		    && binlog_format == BINLOG_FORMAT_STMT)
 		{
 			char buf[256];
 			my_snprintf(buf, sizeof(buf),
