include/mysql_addons.h
@@ -14,34 +14,3 @@ here. In a perfect world this file exists but is empty.
 
 Created November 07, 2007 Vasil Dimov
 *******************************************************/
-
-#include <my_global.h>  /* for my_bool */
-#include <mysql/plugin.h>  /* for MYSQL_THD */
-
-#ifdef __cplusplus
-extern "C" {
-#endif /* __cplusplus */
-
-/***********************************************************************
-Retrieve THD::thread_id
-http://bugs.mysql.com/30930 */
-
-unsigned long
-ib_thd_get_thread_id(
-/*=================*/
-				/* out: THD::thread_id */
-	const void*	thd);	/* in: THD */
-
-#ifdef __cplusplus
-}
-#endif /* __cplusplus */
-
-/* http://bugs.mysql.com/40360 */
-/* http://lists.mysql.com/commits/57450 */
-/**
-  See if the binary log is engaged for a thread, i.e., open and
-  LOG_BIN is set.
-
-  @return @c true if the binlog is active, @c false otherwise.
-*/
-my_bool ib_bin_log_is_engaged(const MYSQL_THD thd);
